--- a/W6D5/NPM/package.json
+++ b/W6D5/NPM/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --mode=development --watch"
   },
   "keywords": [],
   "author": "",
@@ -20,3 +21,4 @@
     "webpack-cli": "^3.1.2"
   }
 }
+
