Push untracked files

--- a/W6D5/NPM/package.json
+++ b/W6D5/NPM/package.json
@@ -2,7 +2,7 @@
   "name": "NPM",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "entry.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --mode=development --watch"
